<resources>
    <string name="app_name">AndroidFundermental</string>
    <string name="username">Your Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="Login_str">Login</string>
    <string name="create_pass">Create Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up Here</string>
    <string name="reg_continue">Continue</string>
    <string name="phone_number">Phone Number</string>
</resources>